修改左边代码块的css,3D变换等

--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
 </head>
 <body>
     <div class="main">
-        <pre id="codeText"></pre>
+        <div class="codeWrapper">
+            <div class="code">
+                <pre id="codeText"></pre>
+            </div>
+        </div>
+        <div class="paperWrapper">
+            <div class="paper">
+                <pre id="paperText"></pre>
+            </div>
+        </div>
     </div>
     <script src="./vendor/prism/prism.js"></script>
     <script src="./js/main.js"></script>
