--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </div>
     </div>
     <script src="./vendor/prism/prism.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
