--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./vendor/prism/prism.css">
     <link rel="stylesheet" href="./css/main.css">
     <style id="styleText"></style>
-    <title>Document</title>
+    <title>马涛涛|动态简历</title>
 </head>
 <body>
     <div class="main">
